--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 @layer base {
-  input[type='text']::placeholder {
-    @apply font-opensans text-gra;
-  }
+    input[type='text']::placeholder {
+        @apply font-opensans text-gra;
+    }
 
-  #root {
-    @apply h-screen w-screen bg-background;
-  }
+    #root {
+        @apply h-screen w-screen;
+    }
 }
